Added Button Bottom

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Traveling"
+        android:text="@string/traveling"
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -26,5 +26,50 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_baseline_more_vert_24" />
+
+    <Button
+        android:id="@+id/btn_ride"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginStart="32dp"
+        android:background="@drawable/ic_bike"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:strokeColor="#101010"
+        tools:layout_editor_absoluteY="482dp" />
+
+    <Button
+        android:id="@+id/btn_flight"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginEnd="32dp"
+        android:background="@drawable/ic_flight"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_ride"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/btn_ride" />
+
+    <TextView
+        android:id="@+id/txt_ride"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/ride"
+        android:textColor="@color/purple_500"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="@+id/btn_ride"
+        app:layout_constraintStart_toStartOf="@+id/btn_ride"
+        app:layout_constraintTop_toBottomOf="@+id/btn_ride" />
+
+    <TextView
+        android:id="@+id/txt_flight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/flight"
+        android:textColor="@color/purple_500"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="@+id/btn_flight"
+        app:layout_constraintStart_toStartOf="@+id/btn_flight"
+        app:layout_constraintTop_toBottomOf="@+id/btn_flight" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
